--- a/src/app/modules/shared/layouts/standard-layout/standard-layout.component.html
+++ b/src/app/modules/shared/layouts/standard-layout/standard-layout.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<app-nav></app-nav>
+<mat-sidenav-container>
+    <mat-sidenav mode="side" opened>
+        <app-sidenav></app-sidenav>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+        <app-footer></app-footer>
+    </mat-sidenav-content>
+</mat-sidenav-container>
