--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,23 @@
+@use 'sass:map';
 @use '~@angular/material' as mat;
+@use './app/modules/shared/components/footer/footer.component.theme.scss' as footer;
+@use './app/pages/home-page/home-page.component.theme.scss' as home-page;
+@import './styles/peeb.theme';
 @include mat.core();
-@import './theming/peeb.theme';
 @include mat.all-component-themes($peeb-theme);
+@include footer.theme($peeb-theme);
+@include home-page.theme($peeb-theme);
+
+$color-config: mat.get-color-config($peeb-theme);
+$primary: map.get($color-config, primary);
+$accent: map.get($color-config, accent);
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { font-family: Roboto, 'Helvetica Neue', sans-serif; margin: 0; }
+a:not(.mat-button-base) { color: mat.get-color-from-palette($accent); text-decoration: none; }
+a:active:not(.mat-button-base), a:hover:not(.mat-button-base) { color: mat.get-color-from-palette($accent, 300); }
+
+.icon { background-size: contain; content-visibility: hidden; display: inline-block; height: 24px; vertical-align: text-bottom; width: 24px; }
+.icon.sprout { background-image: url(./assets/images/icons/sprout.png); }
+.icon.toast { background-image: url(./assets/images/icons/toast.png); }
+.icon.wave { background-image: url(./assets/images/icons/wave.png); }
